Refactor home banner component

--- a/app/globals.css
+++ b/app/globals.css
@@ -241,3 +241,8 @@ footer a:hover {
   color: tomato;
 }
 
+
+:is(.dark .dark\:bg-body) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 30 40 / var(--tw-bg-opacity));
+}
