--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  border: 0;
+  /* border: 0; */
   background-position: center center;
   background-size: cover;
   user-select: none;
