--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
   /* border: 0; */
   background-position: center center;
   background-size: cover;
-  user-select: none;
+  /* user-select: none; */
   outline-color: tomato;
 }
 body {
