--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,10 @@
 }
 /* Styles for medium screens (width up to 1420px) */
 
+.common-class {
+  @apply w-full gap-8 px-8 mx-auto lg:px-0 lg:w-5/6;
+  min-height: auto;
+}
 
 * {
   box-sizing: border-box;
