--- a/app/globals.css
+++ b/app/globals.css
@@ -52,7 +52,7 @@
   height: calc(100vh - 64px); /* Ensure the content takes the full height minus the header */
 }
 .common-class {
-  @apply w-full gap-8 px-8 mx-auto lg:px-0 lg:w-5/6;
+  @apply w-full gap-8 px-8 mx-auto lg:px-0 lg:w-[88%];
   min-height: auto;
 }
 .common-responsive {
