--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@
   height: calc(100vh - 64px); /* Ensure the content takes the full height minus the header */
 }
 .common-class {
-  @apply w-full gap-8 px-5 mx-auto lg:px-0 lg:w-[88%];
+  @apply w-full gap-8 px-5 mx-auto lg:px-0 lg:w-[80%] 2xl:w-[75%];
   min-height: auto;
 }
 .common-responsive {
